# 5-Darbas

./: CMakeLists.txt  README.md  funkcijos.h  main.cpp  swapair.h  swappair.h
Tests/: test.cpp  text.txt
